--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -65,9 +65,185 @@
                 <img src="../../imgs/flower_foto1.png" alt="">
             </div>
        </section>
-       <section>
-
+       <section class="pets-pick">
+           <div class="pets-pick-wrapper">
+               <div class="pet-card">
+                   <img class="pet-img" src="../../imgs/pandas.png" alt="Giant pandas">
+                   <div class="pet-description">
+                       <div class="pet-description-text">
+                           <p class="pet-name">Giant pandas</p>
+                           <p class="pet-origin">Native to Southwest China</p>
+                       </div>
+                       <div class="pet-feed">
+                           <img class="pet-feed-icon" src="../../imgs/banana-bamboo_icon.png" alt="bamboo&banana">
+                       </div>
+                       </div>
+                </div>
+                <div class="pet-card">
+                    <img class="pet-img" src="../../imgs/eagles.png" alt="Eagles">
+                    <div class="pet-description">
+                        <div class="pet-description-text">
+                            <p class="pet-name">Eagles</p>
+                            <p class="pet-origin">Native to South America</p>
+                        </div>
+                        <div class="pet-feed">
+                            <img class="pet-feed-icon" src="../../imgs/meet-fish_icon.png" alt="meat&fish">
+                        </div>
+                    </div>
+                    </div>
+                    <div class="pet-card">
+                        <img class="pet-img" src="../../imgs/gorillas.png" alt="Giant pandas">
+                        <div class="pet-description">
+                            <div class="pet-description-text">
+                                <p class="pet-name">Gorillas</p>
+                                <p class="pet-origin">Native to Congo</p>
+                            </div>
+                            <div class="pet-feed">
+                                <img class="pet-feed-icon" src="../../imgs/banana-bamboo_icon.png" alt="bamboo&banana">>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="pet-card">
+                            <img class="pet-img" src="../../imgs/sloth.png" alt="Giant pandas">
+                            <div class="pet-description">
+                                <div class="pet-description-text">
+                                    <p class="pet-name">two-toed sloth</p>
+                                    <p class="pet-origin">Mesoamerica, South America</p>
+                                </div>
+                                <div class="pet-feed">
+                                    <img class="pet-feed-icon" src="../../imgs/banana-bamboo_icon.png" alt="bamboo&banana">
+                                </div>
+                            </div>
+                            </div>
+                            <div class="pet-card">
+                                <img class="pet-img" src="../../imgs/cheetahs.png" alt="Giant pandas">
+                                <div class="pet-description">
+                                    <div class="pet-description-text">
+                                        <p class="pet-name">cheetahs</p>
+                                        <p class="pet-origin">Native to Africa</p>
+                                    </div>
+                                    <div class="pet-feed">
+                                        <img class="pet-feed-icon" src="../../imgs/meet-fish_icon.png" alt="meat&fish">
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="pet-card">
+                                    <img class="pet-img" src="../../imgs/penguins.png" alt="Giant pandas">
+                                    <div class="pet-description">
+                                        <div class="pet-description-text">
+                                            <p class="pet-name">Penguins</p>
+                                            <p class="pet-origin">Native to Antarctica</p>
+                                        </div>
+                                        <div class="pet-feed">
+                                            <img class="pet-feed-icon" src="../../imgs/meet-fish_icon.png" alt="meat&fish">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="arrow-left"></div>
+                                <div class="arrow-right"></div>
+                                <button class="choose">Choose your favorite</button>
+               </div>
+           </div>
        </section>
+       <section class="pick-and-feed">
+           <div class="pick-inner">
+               <div class="pick-intro">
+                   <h2 class="pick-title">Pick and feed a friend</h2>
+                   <p class="pick-subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
+                   <p class="pick-bolted">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
+                   <p class="pick-text">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider a gift to our <a class="pick-link"  href="../donate/index.html"></a>Emergency Support Fund</a>.</p>
+                    <h3 class="pick-descr">How it works</h3>
+                </div>
+                <div class="feed-flow">
+                    <div class="step">
+                        <img src="../../imgs/pay.png" alt="Pay with card icon" class="step-img1">
+                        <p class="step-text">Pay with card</p>
+                        <img src="../../imgs/Vector.png" alt="arrow" class="step-arrow">
+                    </div>
+                    <div class="step">
+                        <img src="../../imgs/zoo.png" alt="$ tree" class="step-img2">
+                        <p class="step-text">Payment goes to the zoo</p>
+                        <img src="../../imgs/Vector.png" alt="$ tree" class="step-arrow">
+                    </div>
+                    <div class="step">
+                        <img src="../../imgs/monkey.png" alt="monkey with bananas" class="step-img3">
+                        <p class="step-text">Your favourite animal gets delicious dish</p>
+                    </div>
+                </div>
+                <a href="../donate/index.html">
+                    <button class="feed-btn">feed a friend now</button>
+                </a>
+           </div>
+       </section>
+       <section class="testimonials-wrapper">
+           <div class="testimonials-block">
+               <h2 class="testimonials-title">Testimonials</h2>
+               <div class="testimonials-cards">
+                   <div class="testimonials-card-wrapper">
+                       <div class="testimonials-card">
+                           <div class="card-header">
+                               <div class="user-icon"></div>
+                               <div class="user-info">
+                                   <p class="user-name">Mikhael John</p>
+                                    <p class="user-details">Local Austria • Today</p>
+                               </div>
+                            </div>
+                                   <p class="card-text">The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals. <br>
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    </p>
+                       </div>
+                   </div>
+                   <div class="testimonials-card-wrapper">
+                    <div class="testimonials-card">
+                        <div class="card-header">
+                            <div class="user-icon2"></div>
+                            <div class="user-info">
+                                <p class="user-name">Oskar Samborsky</p>
+                                 <p class="user-details">Local Austria • Yesterday</p>
+                            </div>
+                         </div>
+                                <p class="card-text">Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.<br>
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.<br>
+                                 </p>
+                    </div>
+                </div>
+                <div class="testimonials-card-wrapper">
+                    <div class="testimonials-card">
+                        <div class="card-header">
+                            <div class="user-icon3"></div>
+                            <div class="user-info">
+                                <p class="user-name">Fredericka Michelin</p>
+                                 <p class="user-details">Local Austria • Yesterday</p>
+                            </div>
+                         </div>
+                                <p class="card-text">The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals. <br>
+                                 The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                 </p>
+                    </div>
+                </div>
+                <div class="testimonials-card-wrapper">
+                    <div class="testimonials-card">
+                        <div class="card-header">
+                            <div class="user-icon4"></div>
+                            <div class="user-info">
+                                <p class="user-name">Mila Riksha</p>
+                                 <p class="user-details">Local Austria • Yesterday</p>
+                            </div>
+                         </div>
+                                <p class="card-text">My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                 </p>
+                    </div>
+                </div>
+               </div>
+               <div class="testimonials-slider">
+                   <input class="slider" min="1" max="4" type="range" value="1">
+               </div>
+               <button class="feedback-btn">Leave feedback</button>
+           </div>
+       </section>
+       </main>
        <footer>
            <div class="wrapper">
                <div class="footer-top">
@@ -88,12 +264,40 @@
                 </div>
                    <div class="footer-bottom">
                        <div class=social-media>
-                       <ul>
-                           <li>Facebook</li>
-                           <li>Twitter</li>
-                           <li>Instagram</li>
-                           <li>Youtube</li>
-                       </ul>
+                       <ul class="sm-list">
+                        <li class="sm-item">
+                            <a class="sm-link" href="https://facebook.com/">
+                                <span class="sm-icon">
+                                    <span class="icon icon-facebook"></span>
+                                </span>
+                                <span>Facebook</span>
+                            </a>
+                        </li>
+                        <li class="sm-item">
+                            <a class="sm-link" href="https://twitter.com/">
+                                <span class="sm-icon">
+                                    <span class="icon icon-twitter"></span>
+                                </span>
+                                <span>Twitter</span>
+                            </a>
+                        </li>
+                        <li class="sm-item">
+                            <a class="sm-link" href="https://www.instagram.com/">
+                                <span class="sm-icon">
+                                    <span class="icon icon-instagram"></span>
+                                </span>
+                                <span>Instagram</span>
+                            </a>
+                        </li>
+                        <li class="sm-item">
+                            <a class="sm-link" href="https://www.youtube.com/">
+                                <span class="sm-icon">
+                                    <span class="icon icon-youtube"></span>
+                                </span>
+                                <span>YouTube</span>
+                            </a>
+                        </li>
+                    </ul>
                    </div>
                    <div class="footer-nav">
                        <nav class="header-navigation">
@@ -108,9 +312,6 @@
                             <a href="#" class="header-link">Zoos</a>
                         </li>
                         <li class="navigation-item">
-                            <a href="./donate/index.html" class="header-link">Donate</a>
-                        </li>
-                        <li class="navigation-item">
                             <a href="#" class="header-link">Contact us</a>
                         </li>
                     </ul>
@@ -119,11 +320,8 @@
                    <div class="designed-by">
                        <p>Designed by Alisa Samborskaya</p>
                        <p>©RSSchool & ©Yem Digital 2021</p>
-
-                   </div>
                    </div>
            </div>
        </footer>
-   </main>
 </body>
 </html>
