fix: update donate link

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -31,7 +31,7 @@
                         <a href="#" class="header-link">Zoos</a>
                     </li>
                     <li class="navigation-item">
-                        <a href="./donate/index.html" class="header-link">Donate</a>
+                        <a href="../donate/index.html" class="header-link">Donate</a>
                     </li>
                     <li class="navigation-item">
                         <a href="#" class="header-link">Contact us</a>
@@ -260,7 +260,7 @@
                    </form>
                </div>
                <div class="donate-button">
-                       <button class="footer-donate-button"><a class="donate-link" href="./donate/index.html">donate for volunteers</a></button>
+                       <button class="footer-donate-button"><a class="donate-link" href="../donate/index.html">donate for volunteers</a></button>
                 </div>
                    <div class="footer-bottom">
                        <div class=social-media>
