fix: repare radio-selectors

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -67,7 +67,8 @@
                                 <p class="amount">Amount</p>
                                 <div class="donate-select-bar">
                                     <div class="donate-select-line"></div>
-                                    <div class="amount-selector">
+                                    <div class="amount-selector-wrapper">
+                                        <div class="amount-selector">
                                         <input class="selector-radio" type="radio" id="$5000" name="donate-amount" value="5000">
                                         <label class="selector-label" for="$5000">$5000</label>
                                     </div>
@@ -80,7 +81,7 @@
                                     <label class="selector-label" for="$1000">$1000</label>
                                 </div>
                                 <div class="amount-selector">
-                                    <input class="selector-radio" type="radio" id="$500" name="donate-amount" value="500">
+                                    <input class="selector-radio" type="radio" id="$500" name="donate-amount" value="500" checked="checked">
                                     <label class="selector-label" for="$500">$500</label>
                                 </div>
                                 <div class="amount-selector">
@@ -100,6 +101,8 @@
                                     <label class="selector-label" for="$25">$25</label>
                                 </div>
                             </div>
+                                    </div>
+                                    
                         </div>
                         <div class="amount-input">
                             <input class="amount-dollar" type="number" maxlength="4" placeholder="Another amount">
@@ -183,7 +186,7 @@
                     <nav class="header-navigation">
                  <ul class="navigation-list">
                      <li class="navigation-item">
-                         <a href="#" class="header-link">About</a>
+                         <a href="../main/index.html" class="header-link">About</a>
                      </li>
                      <li class="navigation-item">
                          <a href="#" class="header-link">Map</a>
