fix: update link to donate

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -143,7 +143,7 @@
                 </form>
             </div>
             <div class="donate-button">
-                    <button class="footer-donate-button"><a class="donate-link" href="./donate/index.html">donate for volunteers</a></button>
+                    <button class="footer-donate-button"><a class="donate-link" href="../donate/index.html">donate for volunteers</a></button>
              </div>
                 <div class="footer-bottom">
                     <div class=social-media>
